<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver_Email_login_Activity"
    android:padding="15dp"
    android:background="@drawable/login">
    <TextView
        android:id="@+id/driv_status"
        android:layout_width="184dp"
        android:layout_height="33dp"
        android:fontFamily="serif"
        android:text="@string/driver_login"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/driv_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/enter_a_valid_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driv_status"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/driv_email_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driv_status"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/driv_login_btn"
        android:layout_width="208dp"
        android:layout_height="61dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/press_to_login"
        android:textColor="#FFC107"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driv_status"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/driv_reg_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#F40101"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driv_status"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/driv_reg_btn"
        android:layout_width="280dp"
        android:layout_height="65dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/register_here"
        android:textColor="#FFC107"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driv_status"
        app:layout_constraintVertical_bias="0.495" />
</androidx.constraintlayout.widget.ConstraintLayout>