<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taxi_app_bg"
    tools:context=".Choice_Activity">
    <Button
        android:id="@+id/accessories_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/for_taxi_accessories"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mechanic_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/for_taxi_mechanic"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accessories_btn"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ride_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/for_taxi_ride"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/parcel_btn"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/parcel_btn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="#000000"
        android:fontFamily="serif"
        android:text="@string/for_parcel_package"
        android:textColor="#FFC107"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>